# urlio

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_admin.py  0002_user_flags_and_audit_log.py  0003_email_verification.py  0003_user_theme_prefs.py  0004_user_soft_delete.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py  redirect.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  links.py  users.py
backend/app/cache/: redis.py
backend/app/core/: config.py  exceptions.py  logging.py  ratelimit.py  security.py  url_validation.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  admin_audit.py  audit.py  click.py  link.py  user.py
backend/app/schemas/: admin.py  analytics.py  common.py  link.py  token.py  user.py
backend/app/services/: account_flows.py  admin.py  analytics.py  auth.py  email.py  links.py  mailer.py  shortcode.py  users.py
backend/tests/: conftest.py  test_account.py  test_account_flows.py  test_admin.py  test_analytics.py  test_auth.py  test_click_flush_worker.py  test_client_ip.py  test_config_validation.py  test_link_search.py  test_links.py  test_ratelimit.py  test_redirect.py  test_sessions.py  test_shortcode.py  test_users.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  analytics.ts  auth.ts  client.ts  links.ts  tokenStore.ts  types.ts  users.ts
frontend/src/components/: AppearanceSettings.tsx  AuthShell.tsx  Logo.tsx  (+16 more)
(+23 files in other folders)
