[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shortlyx"
version = "0.1.0"
description = "ShortlyX — a stateless, horizontally-scalable async URL-shortener backend (FastAPI)."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "ShortlyX" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "redis==5.2.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pyjwt==2.10.1",
    "argon2-cffi==23.1.0",
    "bcrypt==4.2.1",
    "email-validator==2.2.0",
    "python-multipart==0.0.20",
    "orjson==3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "fakeredis==2.26.2",
    "coverage[toml]==7.6.10",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in defaults by design.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
